--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "game-generator-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://hallerstrom.github.io/GameGeneratorAPP",
+  "homepage": "https://hallerstrom.github.io/Poolspelsverktyget",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
