--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Poolspelsverktyget",
   "short_name": "Poolspel",
-  "start_url": "/",
+  "start_url": "/Poolspelsverktyget/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0d6efd",
