--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,17 +9,17 @@
   "description": "En enkel applikation för att generera spelscheman, laguppdelningar och kioskscheman.",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "/Poolspelsverktyget/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "/Poolspelsverktyget/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-180.png",
+      "src": "/Poolspelsverktyget/icons/icon-180.png",
       "sizes": "180x180",
       "type": "image/png",
       "purpose": "any maskable"
